--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Merge main into next
         id: merge
         run: |
-          git merge origin/main || { echo "Merge conflict detected, will create a pull request."; git merge --abort; echo "RESULT=failure" >> "$GITHUB_OUTPUT"; exit 1; }
+          git merge origin/main || { echo "Merge conflict detected, will create a pull request."; git merge --abort; echo "RESULT=failure" >> "$GITHUB_OUTPUT"; }
           echo "RESULT=success" >> "$GITHUB_OUTPUT"
 
       - name: Push changes
