--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -24,8 +24,14 @@ jobs:
       - name: Merge main into next
         id: merge
         run: |
-          git merge origin/main || { echo "Merge conflict detected, will create a pull request."; git merge --abort; echo "RESULT=failure" >> "$GITHUB_OUTPUT"; }
-          echo "RESULT=success" >> "$GITHUB_OUTPUT"
+          git merge origin/main
+          if [ $? -ne 0 ]; then
+            echo "Merge conflict detected, will create a pull request."
+            git merge --abort
+            echo "RESULT=failure" >> "$GITHUB_OUTPUT"
+          else
+            echo "RESULT=success" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Push changes
         run: git push origin next
