--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -22,10 +22,12 @@ jobs:
       - uses: fregante/setup-git-user@v2
 
       - name: Merge main into next
-        id: merge
+        run: git merge origin/main || echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
+
+      - name: Check flag
+        id: result
         run: |
-          git merge origin/main
-          if [ $? -ne 0 ]; then
+          if [ -n "$MERGE_CONFLICT" ]; then
             echo "Merge conflict detected, will create a pull request."
             git merge --abort
             echo "RESULT=failure" >> "$GITHUB_OUTPUT"
@@ -35,11 +37,11 @@ jobs:
 
       - name: Push changes
         run: git push origin next
-        if: steps.merge.outputs.RESULT == 'success'
+        if: steps.result.outputs.RESULT == 'success'
 
       - name: Create a new PR if there are conflicts
         uses: peter-evans/create-pull-request@v7
-        if: steps.merge.outputs.RESULT == 'failure'
+        if: steps.result.outputs.RESULT == 'failure'
         with:
           title: 'Merge main into next'
           body: 'This PR is created automatically due to merge conflicts.'
