--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -51,3 +51,4 @@ jobs:
         with:
           title: 'Merge main into next'
           body: 'This PR is created automatically due to merge conflicts.'
+          branch: next
