--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -46,3 +46,4 @@ jobs:
           title: 'Merge main into next'
           body: 'This PR is created automatically due to merge conflicts.'
           branch: 'merge-main-into-next-${{ github.run_id }}'
+          base: 'next'
