--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -20,45 +20,36 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Reset promotion branch
+      - uses: fregante/setup-git-user@v2
+
+      - name: Reset branch
         run: |
           git fetch origin main:main
           git reset --hard main
-      - name: Create Pull Request
+
+      - name: Merge main into next
+        id: merge
+        run: git merge origin/main || echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
+
+      - name: Check flag
+        id: result
+        run: |
+          if [ -n ${{ steps.merge.outputs.MERGE_CONFLICT }} ]; then
+            echo "Merge conflict detected, will create a pull request."
+            git merge --abort
+            echo "RESULT=failure" >> "$GITHUB_OUTPUT"
+          else
+            echo "RESULT=success" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Push changes
+        run: git push origin next
+        if: steps.result.outputs.RESULT == 'success'
+
+      - name: Create a new PR if there are conflicts
         uses: peter-evans/create-pull-request@v7
+        if: steps.result.outputs.RESULT == 'failure'
         with:
-          branch: next-promotion
-
-      # - name: Fetch other branches
-      #   run: git fetch origin main
-
-      # - uses: fregante/setup-git-user@v2
-
-      # - name: Merge main into next
-      #   id: merge
-      #   run: git merge origin/main || echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
-
-      # - name: Check flag
-      #   id: result
-      #   run: |
-      #     if [ -n ${{ steps.merge.outputs.MERGE_CONFLICT }} ]; then
-      #       echo "Merge conflict detected, will create a pull request."
-      #       git merge --abort
-      #       git checkout main
-      #       echo "RESULT=failure" >> "$GITHUB_OUTPUT"
-      #     else
-      #       echo "RESULT=success" >> "$GITHUB_OUTPUT"
-      #     fi
-
-      # - name: Push changes
-      #   run: git push origin next
-      #   if: steps.result.outputs.RESULT == 'success'
-
-      # - name: Create a new PR if there are conflicts
-      #   uses: peter-evans/create-pull-request@v7
-      #   if: steps.result.outputs.RESULT == 'failure'
-      #   with:
-      #     title: 'Merge main into next'
-      #     body: 'This PR is created automatically due to merge conflicts.'
-      #     branch: 'merge-main-into-next-${{ github.sha }}'
-      #     base: next
+          title: 'Merge main into next'
+          body: 'This PR is created automatically due to merge conflicts.'
+          branch: 'next-temp'
