--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -31,14 +31,13 @@ jobs:
         id: merge
         run: |
           echo "MERGE_CONFLICT=0" >> "$GITHUB_OUTPUT"
-          git merge origin/main || echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
+          git merge origin/main || git merge --abort && echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
 
       - name: Check flag
         id: result
         run: |
           if [ -n ${{ steps.merge.outputs.MERGE_CONFLICT }} ]; then
             echo "Merge conflict detected, will create a pull request."
-            git merge --abort
             echo "RESULT=failure" >> "$GITHUB_OUTPUT"
           else
             echo "RESULT=success" >> "$GITHUB_OUTPUT"
