--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -30,11 +30,10 @@ jobs:
       - name: Merge main into next
         id: merge
         run: |
-          echo "MERGE_CONFLICT=0" >> "$GITHUB_OUTPUT"
           git merge origin/main || echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
 
       - name: Push changes
-        if: steps.merge.outputs.MERGE_CONFLICT == '0'
+        if: steps.merge.outputs.MERGE_CONFLICT != '1'
         run: git push origin next
 
       - name: Create a new PR if there are conflicts
