--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -31,6 +31,7 @@ jobs:
         id: merge
         run: |
           git merge origin/main || echo "MERGE_CONFLICT=1" >> "$GITHUB_OUTPUT"
+          echo $GITHUB_OUTPUT
 
       - name: Push changes
         if: steps.merge.outputs.MERGE_CONFLICT != '1'
