--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Reset branch
         run: |
           git fetch origin main:main
-          git reset --hard main
+        # git reset --hard main
 
       - name: Merge main into next
         id: merge
