--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Merge main into next
         id: merge
         run: |
+          git fetch origin
           git checkout -b next origin/next
           git merge main
           git push origin next
