--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -17,16 +17,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Merge main into next
-        id: merge
         run: |
-          git fetch origin
+          git fetch origin next
           git checkout -b next origin/next
-          git merge main
+          git merge main --no-ff
           git push origin next
 
       - name: Create a new PR if there are conflicts
         if: ${{ failure()}}
         run: |
-          git checkout -b merge-main-to-next
-          git push origin merge-main-to-next
+          git checkout -b merge-main-to-next-${{ github.run_number }}
+          git push origin merge-main-to-next-${{ github.run_number }}
           gh pr create --base next --head merge-main-to-next --title "Merge main into next" --body "This PR was created automatically because there were conflicts when merging main into next."
