--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: next
+      - uses: fregante/setup-git-user@v2
 
       - name: Merge main into next
         run: |
