--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -33,4 +33,4 @@ jobs:
         run: |
           git checkout -b merge-main-to-next-${{ github.run_number }}
           git push origin merge-main-to-next-${{ github.run_number }}
-          gh pr create --base next --head merge-main-to-next --title "Merge main into next" --body "This PR was created automatically because there were conflicts when merging main into next."
+          gh pr create --base next --head merge-main-to-next-${{ github.run_number }} --title "Merge main into next" --body "This PR was created automatically because there were conflicts when merging main into next."
