--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Merge main into next
         run: |
+          git status
+          git switch next
           git fetch origin main
           git merge origin/main --no-ff --allow-unrelated-histories
           git push origin next
