--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git fetch origin next
           git checkout -b next origin/next
-          git merge main --no-ff --allow-unrelated-histories
+          git merge main --no-ff
           git push origin next
 
       - name: Create a new PR if there are conflicts
@@ -31,5 +31,5 @@ jobs:
         run: |
           git merge --abort
           git checkout -b merge-main-to-next origin/main
-          git push origin merge-main-to-next
+          git push origin merge-main-to-next --force
           gh pr create --base next --head merge-main-to-next --title "Merge main into next" --body "This PR was created automatically because there were conflicts when merging main into next."
