--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -32,5 +32,9 @@ jobs:
         run: |
           git merge --abort
           git checkout -b merge-main-to-next origin/main
-          git push origin merge-main-to-next --force
-          gh pr create --base next --head merge-main-to-next --title "Merge main into next" --body "This PR was created automatically because there were conflicts when merging main into next."
+          git push origin merge-main-to-next --force-with-lease
+          gh pr create \
+            --base next \
+            --head merge-main-to-next \
+            --title "Merge main into next" \
+            --body "This PR was created automatically because there were conflicts when merging main into next."
