--- a/.github/workflows/merge-master-to-next.yml
+++ b/.github/workflows/merge-master-to-next.yml
@@ -31,10 +31,8 @@ jobs:
         if: ${{ failure()}}
         run: |
           git merge --abort
-          git checkout -b merge-main-to-next origin/main
-          git push origin merge-main-to-next --force-with-lease
           gh pr create \
             --base next \
-            --head merge-main-to-next \
+            --head main \
             --title "Merge main into next" \
             --body "This PR was created automatically because there were conflicts when merging main into next."
