--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -34,6 +34,8 @@ jobs:
           git push origin HEAD
 
       - uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           draft: true
           tag_name: v${{steps.version.outputs.NEW_VERSION}}
