--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "vrt": "echo \"Running VRT\"",
+    "vrt": "cat test2.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
