スクリプト名を修正

--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -41,5 +41,5 @@ jobs:
 
       # スナップショットを比較する
       - name: Compare snapshots
-        run: npm run vrt:compare
+        run: npm run vrt:diff
       
