--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "vrt": "cat test2.ts",
     "vrt:snapshot": "touch snapshot.txt && cat test2.ts >> snapshot.txt",
     "vrt:diff": "diff -u expected/snapshot.txt actual/snapshot.txt",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,16 @@
   "bugs": {
     "url": "https://github.com/uuyu-g/gh-action-sandbox/issues"
   },
-  "homepage": "https://github.com/uuyu-g/gh-action-sandbox#readme"
+  "homepage": "https://github.com/uuyu-g/gh-action-sandbox#readme",
+  "devDependencies": {
+    "@storybook/addon-essentials": "^8.5.3",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/addon-onboarding": "^8.5.3",
+    "@storybook/blocks": "^8.5.3",
+    "@storybook/react": "^8.5.3",
+    "@storybook/react-vite": "^8.5.3",
+    "@storybook/test": "^8.5.3",
+    "prop-types": "^15.8.1",
+    "storybook": "^8.5.3"
+  }
 }
