--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "vrt": "cat test2.ts",
     "vrt:snapshot": "touch snapshot.txt && cat test2.ts >> snapshot.txt",
     "vrt:diff": "diff -u expected/snapshot.txt actual/snapshot.txt",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -23,6 +22,7 @@
   },
   "homepage": "https://github.com/uuyu-g/gh-action-sandbox#readme",
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
     "@storybook/addon-essentials": "^8.5.3",
     "@storybook/addon-interactions": "^8.5.3",
     "@storybook/addon-onboarding": "^8.5.3",
@@ -30,6 +30,7 @@
     "@storybook/react": "^8.5.3",
     "@storybook/react-vite": "^8.5.3",
     "@storybook/test": "^8.5.3",
+    "@types/node": "^22.13.1",
     "prop-types": "^15.8.1",
     "storybook": "^8.5.3"
   }
