--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 node_modules
+storybook-static
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/snapshots/
