--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/test": "^8.5.3",
     "@types/node": "^22.13.1",
     "prop-types": "^15.8.1",
+    "reg-cli": "^0.18.10",
     "storybook": "^8.5.3"
   }
 }
