--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -22,14 +22,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Take snapshot of base branch
-        run: npm run vrt:snapshot
+      - name: Build storybook
+        run: npm run build-storybook
+      - name: Serve Storybook and run tests
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 6006 --silent" \
+            "npx wait-on tcp:127.0.0.1:6006 && npm run vrt:snapshot"
 
       - name: Upload snapshot
         uses: actions/upload-artifact@v4
         with:
           name: vrt-expected
-          path: snapshot.txt
+          path: snapshots
 
   # PRのスナップショットを撮る
   acutual_snapshot:
@@ -46,14 +51,19 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Take snapshot of head branch
-        run: npm run vrt:snapshot
+      - name: Build storybook
+        run: npm run build-storybook
+      - name: Serve Storybook and run tests
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 6006 --silent" \
+            "npx wait-on tcp:127.0.0.1:6006 && npm run vrt:snapshot"
 
       - name: Upload snapshot
         uses: actions/upload-artifact@v4
         with:
           name: vrt-actual
-          path: snapshot.txt
+          path: snapshots
 
   # スナップショットを比較する
   compare:
@@ -75,12 +85,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: vrt-expected
-          path: expected
+          path: snapshots/expected
       - name: Download snapshot
         uses: actions/download-artifact@v4
         with:
           name: vrt-actual
-          path: actual
+          path: snapshots/actual
 
       - name: Compare snapshots
         run: npm run vrt:diff
