--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: "22"
       - name: Install dependencies
         run: npm install
+      - name: Install playwright
+        run: npx playwright install
 
       - name: Build storybook
         run: npm run build-storybook
@@ -50,6 +52,8 @@ jobs:
           node-version: "22"
       - name: Install dependencies
         run: npm install
+      - name: Install playwright
+        run: npx playwright install
 
       - name: Build storybook
         run: npm run build-storybook
