--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -98,3 +98,10 @@ jobs:
 
       - name: Compare snapshots
         run: npm run vrt:diff
+
+      - name: Upload report
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: vrt-report
+          path: snapshots/report.html
