--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -104,4 +104,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: vrt-report
-          path: snapshots/report.html
+          path: |
+            snapshots/report.html
+            snapshots/diff
