--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Install playwright
-        run: npx playwright install --with-deps
+        run: npx playwright install
 
       - name: Build storybook
         run: npm run build-storybook
@@ -55,7 +55,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Install playwright
-        run: npx playwright install --with-deps
+        run: npx playwright install
 
       - name: Download snapshot
         uses: actions/download-artifact@v4
@@ -69,7 +69,7 @@ jobs:
         run: |
           npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
             "npx http-server storybook-static --port 6006 --silent" \
-            "npx wait-on tcp:127.0.0.1:6006 && npm run vrt:compare"
+            "npx wait-on tcp:127.0.0.1:6006 && npm run vrt:diff"
 
       - name: Upload report
         if: failure()
