--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "22"
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
       - name: Install playwright
@@ -52,6 +53,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "22"
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
       - name: Install playwright
