--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -33,11 +33,17 @@ jobs:
             "npx http-server storybook-static --port 6006 --silent" \
             "npx wait-on tcp:127.0.0.1:6006 && npm run vrt:snapshot"
 
-      - name: Upload snapshot
-        uses: actions/upload-artifact@v4
+      - name: Cache snapshots
+        uses: actions/cache/save@v3
         with:
-          name: vrt-expected
           path: snapshots
+          key: reg-suit-cache-${{ github.event.pull_request.base.sha }}
+        
+      # - name: Upload snapshot
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: vrt-expected
+      #     path: snapshots
 
   # Playwrightを使って比較する
   compare:
@@ -59,11 +65,17 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Download snapshot
-        uses: actions/download-artifact@v4
+      - name: Restore snapshots
+        uses: actions/cache/restore@v3
         with:
-          name: vrt-expected
+          key: reg-suit-cache-${{ github.event.pull_request.base.sha }}
           path: snapshots
+
+      # - name: Download snapshot
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: vrt-expected
+      #     path: snapshots
 
       - name: Build storybook
         run: npm run build-storybook
