--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/cache/restore@v3
         with:
           key: reg-suit-cache-${{ github.event.pull_request.base.sha }}
+          path: snapshots
 
       - if: steps.restore.outputs.cache-hit != 'true'
         name: Install dependencies
