--- a/.github/workflows/vrt.yml
+++ b/.github/workflows/vrt.yml
@@ -17,19 +17,19 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.base.ref }}
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "22"
-          cache: 'npm'
-
-      - name: Restore snapshots
+      - name: Restore cache
         id: restore
         uses: actions/cache/restore@v3
         with:
           key: reg-suit-cache-${{ github.event.pull_request.base.sha }}
           path: snapshots
 
+      - if: steps.restore.outputs.cache-hit != 'true'
+        name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "22"
+          cache: 'npm'
       - if: steps.restore.outputs.cache-hit != 'true'
         name: Install dependencies
         run: npm install
