reg suit用のワークフローを追加

--- a/.github/workflows/vrt_reg.yml
+++ b/.github/workflows/vrt_reg.yml
@@ -1,11 +1,11 @@
-name: VRT
+name: reg VRT
 
 on:
   pull_request:
     types: [synchronize, labeled]
 
 env:
-  LABEL_NAME: 'vrt'
+  LABEL_NAME: 'vrt_reg'
 
 jobs:
   # ベースブランチのスナップショットを撮る
